# distillgov

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PRODUCT.md  README.md  config.py  docker-compose.yaml  pyproject.toml
api/: __init__.py  database.py  main.py
api/routers/: activity.py  bills.py  committees.py  members.py  stats.py  trades.py  votes.py
dags/: distillgov_pipeline.py
db/: SCHEMA.md  facts.sql  legislators.csv  schema.sql
dbt_distillgov/: dbt_project.yml  profiles.yml
dbt_distillgov/models/: sources.yml
dbt_distillgov/models/marts/: _marts.yml  agg_bill_type_breakdown.sql  agg_chamber_comparison.sql  agg_congress_summary.sql  agg_fiscal_year_summary.sql  agg_member_scorecard.sql  agg_monthly_activity.sql  agg_party_breakdown.sql  agg_policy_breakdown.sql  agg_quarterly_activity.sql  fct_bills.sql  fct_members.sql
dbt_distillgov/models/staging/: _staging.yml  stg_bill_actions.sql  stg_bill_cosponsors.sql  stg_bill_subjects.sql  stg_bills.sql  stg_committee_members.sql  stg_committees.sql  stg_member_votes.sql  stg_members.sql  stg_trades.sql  stg_votes.sql  stg_zip_districts.sql
ingestion/: __init__.py  cli.py  client.py  constants.py  db.py  enrich_members.py  load_zip_districts.py  log.py  quality.py  senate_client.py  sync_bills.py  sync_committees.py  sync_members.py  sync_meta.py  sync_trades.py  sync_votes.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json
web/src/: app.tsx  index.css  main.tsx
web/src/api/: activity.ts  bills.ts  client.ts  committees.ts  members.ts  stats.ts  types.ts  votes.ts
(+28 files in other folders)
